--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
   "main": "index.js",
   "devDependencies": {},
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danfranco73/ecommerceDanFranco.git"
+  },
+  "bugs": {
+    "url": "https://github.com/danfranco73/ecommerceDanFranco/issues"
+  },
+  "homepage": "https://github.com/danfranco73/ecommerceDanFranco#readme"
 }
